--- a/.classpath
+++ b/.classpath
@@ -9,8 +9,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jackson2.2"/>
 	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.hibernate.MYECLIPSE_HIBERNATE3_3_EM"/>
 	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.hibernate.MYECLIPSE_HIBERNATE3_3_CORE"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/springMVC4"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/mysql-connector-java-5.1.36-bin.jar"/>
-	<classpathentry kind="lib" path="E:/jar/struts2Lib/commons-fileupload-1.2.2.jar"/>
-	<classpathentry kind="lib" path="E:/jar/struts2Lib/commons-io-2.0.1.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
