--- a/.classpath
+++ b/.classpath
@@ -10,6 +10,7 @@
 	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.hibernate.MYECLIPSE_HIBERNATE3_3_EM"/>
 	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.hibernate.MYECLIPSE_HIBERNATE3_3_CORE"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/springMVC4"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/fileupload"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/mysql-connector-java-5.1.36-bin.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jjwt"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
