--- a/.classpath
+++ b/.classpath
@@ -6,12 +6,13 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/SpringMVC4"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jackson2.2"/>
 	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.hibernate.MYECLIPSE_HIBERNATE3_3_EM"/>
 	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.hibernate.MYECLIPSE_HIBERNATE3_3_CORE"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/springMVC4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/fileupload"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/proxool"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/mysql-connector-java-5.1.36-bin.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jjwt"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jackson2.8"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
