--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/mysql-connector-java-5.1.36-bin.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jjwt"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jackson2.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/zxing"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
