--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.hibernate.MYECLIPSE_HIBERNATE3_3_EM"/>
 	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.hibernate.MYECLIPSE_HIBERNATE3_3_CORE"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/SpringMVC4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/fileupload"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/proxool"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/itextpdf5"/>
@@ -17,7 +16,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/alipay"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/bcprov"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/httpClient"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/spring4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/redis"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/springMVC4.2.7"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
